--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -58,6 +58,10 @@ required = [
   # revision is set because verioned release is missing 2 important fixes
   revision = "13995c7128ccc8e51e9a6bd2b551020a27180abd"
 
+[[override]]
+  name = "github.com/vishvananda/netlink"
+  version = "v1.0.0"
+
 [[constraint]]
   branch = "master"
   name = "golang.org/x/net"
